tried fixing overflow again

--- a/src/components/home/components/banner.css
+++ b/src/components/home/components/banner.css
@@ -44,7 +44,7 @@
       background-size: cover;
       background-repeat: no-repeat;
       height: 100%;
-      border-radius: 10px 20px 30px;
+      border-radius: 20px 20px 20px;
     }
 
     .promo-link{
