--- a/src/components/layout/footer.css
+++ b/src/components/layout/footer.css
@@ -1,3 +1,4 @@
+
 .top-footer .footer-top-cap span a {
     font-size: 60px;
     display: block;
@@ -8,4 +9,14 @@
 
 .top-footer .footer-top-cap img {
     margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 568px){
+   footer .bottom-footer {
+        margin-top: 4.5rem ;
+    }
+
+    .home .footer {
+        padding: 5rem 0 0;
+    }
 }
