--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -51,7 +51,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     /* outline: 2px solid red !important; */
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 .page-header .breadcrumbs{
